--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.5.1",
+    "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/messaging": "^14.5.1",
+    "@react-native-google-signin/google-signin": "^7.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
-    "react-native-device-info": "^8.4.9",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.0",
-    "react-native-slide-to-unlock": "^0.1.6",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
